--- a/package.json
+++ b/package.json
@@ -3,26 +3,22 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "build": "vite build",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
     "dev": "vite",
-    "format": "prettier --write src/",
+    "build": "vite build",
     "preview": "vite preview",
-    "sass": "sass --watch --update --style=expanded src/scss:src/scss",
-    "sitemap": "vue-cli-service sitemap"
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
+    "format": "prettier --write src/",
+    "sass": "sass --watch --update --style=expanded src/scss:src/scss"
   },
   "dependencies": {
     "@chenfengyuan/vue-qrcode": "^2.0.0",
-    "esm": "^3.2.25",
     "pinia": "^2.0.36",
     "pinia-plugin-persistedstate": "^3.2.0",
     "qrcode": "^1.5.3",
     "qrcode.vue": "^3.4.1",
-    "sitemap": "^7.1.1",
     "vue": "^3.3.4",
     "vue-qrcode-component": "^2.1.1",
-    "vue-router": "^4.2.4",
-    "vue-router-sitemap": "^0.0.4"
+    "vue-router": "^4.2.2"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.2.0",
@@ -33,7 +29,6 @@
     "prettier": "^2.8.8",
     "sass": "^1.63.3",
     "vite": "^4.3.5",
-    "vue-cli-plugin-sitemap": "~2.3.0",
     "vue-qrcode-dynamic": "^3.0.3"
   }
 }
