--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ lerna-debug.log*
 node_modules
 .DS_Store
 dist-ssr
+dist
 coverage
 *.local
 
@@ -26,3 +27,4 @@ coverage
 *.sln
 *.sw?
 .vercel
+coffee-shop.code-workspace
