change icon quality & footer height

--- a/package.json
+++ b/package.json
@@ -12,11 +12,17 @@
   },
   "dependencies": {
     "@chenfengyuan/vue-qrcode": "^2.0.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-brands-svg-icons": "^6.4.2",
+    "@fortawesome/free-regular-svg-icons": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/vue-fontawesome": "^3.0.3",
     "pinia": "^2.0.36",
     "pinia-plugin-persistedstate": "^3.2.0",
     "qrcode": "^1.5.3",
     "qrcode.vue": "^3.4.1",
     "vue": "^3.3.4",
+    "vue-fontawesome": "^0.0.2",
     "vue-qrcode-component": "^2.1.1",
     "vue-router": "^4.2.2"
   },
