--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "j",
+  "name": "lazycup",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -17,6 +17,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/vue-fontawesome": "^3.0.3",
+    "nprogress": "^0.2.0",
     "pinia": "^2.0.36",
     "pinia-plugin-persistedstate": "^3.2.0",
     "vue": "^3.3.4",
@@ -28,8 +29,13 @@
     "@vitest/ui": "^0.34.6",
     "@vue/test-utils": "^2.4.2",
     "http-proxy-middleware": "^2.0.6",
+    "rollup-plugin-visualizer": "^5.9.3",
     "sass": "^1.63.3",
+    "sharp": "^0.33.0",
+    "svgo": "^3.0.4",
     "vite": "^4.3.5",
+    "vite-plugin-image-optimizer": "^1.1.7",
+    "vite-plugin-pwa": "^0.17.2",
     "vitest": "^0.34.6"
   }
 }
